Fix long company name on mobile by using ellipsis

--- a/client/resources/public/wh.css
+++ b/client/resources/public/wh.css
@@ -15570,7 +15570,9 @@ h3 {
       margin-right: 18px; } }
 
 .company-profile__header__inner {
-  width: 100%; }
+  height: 78px;
+  width: 100%;
+  display: flex; }
   .company-profile__header__inner form {
     display: flex;
     align-items: flex-end; }
@@ -15578,11 +15580,6 @@ h3 {
       margin-left: 18px; }
     .company-profile__header__inner form .field label {
       margin: 0 !important; }
-
-.company-profile__header__inner__top {
-  display: grid;
-  grid-template-columns: 60px auto;
-  grid-template-rows: 78px; }
 
 .company-profile__header__links {
   border-top: 1px solid #f2f7f8;
@@ -15608,9 +15605,11 @@ h3 {
     .company-profile__header__link {
       padding: 0px 18px 0px 18px; } }
 
-.company-profile__logo img {
-  width: 60px;
-  height: 60px; }
+.company-profile__logo {
+  flex: 0 0 60px; }
+  .company-profile__logo img {
+    width: 60px;
+    height: 60px; }
 
 .company-profile__sticky_logo {
   flex: 1 0 32px; }
@@ -15619,10 +15618,22 @@ h3 {
     height: 32px; }
 
 .company-profile__name {
-  font-size: 24px;
-  margin-left: 18px;
-  line-height: 60px;
-  font-weight: 600; }
+  display: flex;
+  align-items: center;
+  flex: 1;
+  min-width: 0; }
+  .company-profile__name a {
+    min-width: 0; }
+  .company-profile__name h1 {
+    min-width: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 24px;
+    margin-left: 18px;
+    font-weight: 600;
+    color: #434E55;
+    line-height: 60px; }
 
 .company-profile__photos__add {
   position: relative;
